--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "environment": "nodemon environment_variables.js",
     "globals": "nodemon modules/globals.js",
-    "fs": "nodemon modules/fs.js"
+    "fs": "nodemon modules/fs.js",
+    "console": "nodemon modules/console.js"
   },
   "keywords": [],
   "author": "",
