--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "fs": "nodemon modules/fs.js",
     "console": "nodemon modules/console.js",
     "child_process": "nodemon modules/childProcess.js",
-    "native": "nodemon modules/natives/index.js"
+    "native": "nodemon modules/natives/index.js",
+    "http": "nodemon modules/http.js"
   },
   "keywords": [],
   "author": "",
