--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "buffer": "nodemon memory/buffer.js",
     "streams": "nodemon memory/streams.js",
     "tricks/benchmarking": "nodemon tricks/benchmarking.js",
-    "tricks/errorfirst": "nodemon tricks/errorFirst.js"
+    "tricks/errorfirst": "nodemon tricks/errorFirst.js",
+    "tools/scrapping": "nodemon tools/scrapping/index.js"
   },
   "keywords": [],
   "author": "",
@@ -31,6 +32,7 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "moment": "^2.26.0",
+    "puppeteer": "^3.2.0",
     "sharp": "^0.25.3"
   }
 }
